--- a/test.html
+++ b/test.html
@@ -55,6 +55,7 @@
             background-size: cover;
             border: 1px solid black;
             margin: 20px auto;
+            z-index: 2;
         }
         .crosshair {
             position: absolute;
@@ -124,9 +125,27 @@
             height: 20px;
             min-width: 20px;
         }
+        h1 {
+            background-color: #F5DF4D;
+            color: black;
+            padding: 20px;
+            border-radius: 30px;
+            text-align: center;
+            max-width: 400px;
+            margin: 20px auto;
+            font-family: 'Comic Sans MS', 'Chalkduster', 'cursive';
+        }
+        #pruts-image {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            width: 150px;
+            z-index: 1;
+        }
     </style>
 </head>
 <body>
+    <img src="pruts.png" id="pruts-image" alt="P.R.U.T.S. Mascot">
     <h1>Gecombineerde Tool</h1>
 
     <div class="form-container">
