--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gecombineerde Tool</title>
+    <title>P.R.U.T.S</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <a href="index.html" class="home-icon"><i class="fas fa-home"></i></a>
@@ -126,17 +126,17 @@
             min-width: 20px;
         }
         h1 {
-            background-color: #F5DF4D;
+            background-color: white;
             color: black;
             padding: 20px;
             border-radius: 30px;
             text-align: center;
-            max-width: 400px;
+            max-width: 500px;
             margin: 20px auto;
             font-family: 'Comic Sans MS', 'Chalkduster', 'cursive';
         }
         #pruts-image {
-            position: fixed;
+            position: absolute;
             top: 10px;
             right: 10px;
             width: 150px;
@@ -146,7 +146,7 @@
 </head>
 <body>
     <img src="pruts.png" id="pruts-image" alt="P.R.U.T.S. Mascot">
-    <h1>Gecombineerde Tool</h1>
+    <h1>Hallo, Ik ben P.R.U.T.S <br> (Pijplas Radiografie Ultieme Technische Sidekick)</h1>
 
     <div class="form-container">
         <div class="form-item">
