--- a/test.html
+++ b/test.html
@@ -127,6 +127,7 @@
         }
         h1 {
             background-color: white;
+            font-size: 12px; 
             color: black;
             padding: 10px;
             border-radius: 30px;
