--- a/test.html
+++ b/test.html
@@ -134,6 +134,8 @@
             text-align: center;
             max-width: 500px;
             margin: 20px auto;
+            border-style: solid;
+            border-color: black;
         }
         #pruts-image {
             position: absolute;
