--- a/test.html
+++ b/test.html
@@ -136,6 +136,7 @@
             margin: 20px auto;
             border-style: solid;
             border-color: black;
+            text-shadow: none;
         }
         #pruts-image {
             position: absolute;
