--- a/test.html
+++ b/test.html
@@ -259,7 +259,7 @@
             </div>
         </div>
 
-        <button type="button" class="submit-btn" onclick="calculate()">Bereken</button>
+        <button type="button" class="submit-btn" onclick="calculate()">Controleer</button>
     </div>
 
     <div id="results-section">
