--- a/test.html
+++ b/test.html
@@ -168,6 +168,7 @@
         <div class="form-item" id="enBSubProcedureDiv" style="display:none;">
             <label for="enBSubProcedure">Klantprocedure:</label>
             <select id="enBSubProcedure" name="enBSubProcedure">
+                <option value="" disabled selected>Selecteer procedure</option>
                 <option value="RT16172">RT16172 Sabic</option>
                 <option value="RT14171">RT14171 Sitech</option>
                 <option value="RT20230059">RT 2023 0059 Haffmans</option>
