--- a/test.html
+++ b/test.html
@@ -803,21 +803,25 @@
                     }
                 }
             } else if (procedure === "EN-B") {
-                // const technique = document.getElementById("technique").value; // Already defined above
-                let doorstraaldeDikte = 2 * wanddikte;
+                let doorstraaldeDikte;
+                if (technique === "SWSI") {
+                    doorstraaldeDikte = wanddikte;
+                } else { // DWSI or DWDI
+                    doorstraaldeDikte = 2 * wanddikte;
+                }
 
                 if (technique === "SWSI") {
-                    if (wanddikte <= 1.5) wire = "W19";
-                    else if (wanddikte <= 2.5) wire = "W18";
-                    else if (wanddikte <= 4) wire = "W17";
-                    else if (wanddikte <= 6) wire = "W16";
-                    else if (wanddikte <= 8) wire = "W15";
-                    else if (wanddikte <= 12) wire = "W14";
-                    else if (wanddikte <= 20) wire = "W13";
-                    else if (wanddikte <= 30) wire = "W12";
-                    else if (wanddikte <= 35) wire = "W11";
-                    else if (wanddikte <= 45) wire = "W10";
-                    else if (wanddikte <= 65) wire = "W9";
+                    if (doorstraaldeDikte <= 1.5) wire = "W19";
+                    else if (doorstraaldeDikte <= 2.5) wire = "W18";
+                    else if (doorstraaldeDikte <= 4) wire = "W17";
+                    else if (doorstraaldeDikte <= 6) wire = "W16";
+                    else if (doorstraaldeDikte <= 8) wire = "W15";
+                    else if (doorstraaldeDikte <= 12) wire = "W14";
+                    else if (doorstraaldeDikte <= 20) wire = "W13";
+                    else if (doorstraaldeDikte <= 30) wire = "W12";
+                    else if (doorstraaldeDikte <= 35) wire = "W11";
+                    else if (doorstraaldeDikte <= 45) wire = "W10";
+                    else if (doorstraaldeDikte <= 65) wire = "W9";
                 } else if (technique === "DWDI") {
                     if (doorstraaldeDikte <= 1.5) wire = "W19";
                     else if (doorstraaldeDikte <= 2.5) wire = "W18";
@@ -844,7 +848,7 @@
                 }
 
                 if (source === "Se75") {
-                    if (technique === "SWSI"  && wanddikte >5 && wanddikte <= 20) {
+                    if (technique === "SWSI"  && doorstraaldeDikte >5 && doorstraaldeDikte <= 20) {
                         wire = "W" + (parseInt(wire.substring(1)) - 1);
                     } else if (technique === "DWDI" && doorstraaldeDikte >5 &&  doorstraaldeDikte <= 12) {
                         wire = "W" + (parseInt(wire.substring(1)) - 1);
@@ -984,17 +988,12 @@
                 }
             }
 
-            let filmType;
             let ovenMateriaal = "Nee";
             if (filmQualityProcedure === "RT16172") {
                 ovenMateriaal = document.getElementById("ovenMateriaal").value;
             }
 
-            if (filmQualityProcedure === "RT16172" && ovenMateriaal === "Ja") {
-                filmType = "D4";
-            } else {
-                filmType = determineFilmQuality(filmQualityProcedure, doorstraaldeDikte, filmQualitySource);
-            }
+            let filmType = determineFilmQuality(filmQualityProcedure, doorstraaldeDikte, filmQualitySource, ovenMateriaal);
             document.getElementById("film-quality-result").innerText = "Vereist filmtype: " + filmType;
 
             const activityResultElement = document.getElementById("activity-result");
@@ -1095,7 +1094,7 @@
             }
         }
 
-        function determineFilmQuality(procedure, w, source) {
+        function determineFilmQuality(procedure, w, source, ovenMateriaal = "Nee") {
             // DIRECTE RETURN VOOR RT20230059 (Haffmans)
             if (procedure === "RT20230059") {
                 // Check of de bron correct is (hoewel dit ook in de submit handler gebeurt)
@@ -1180,6 +1179,12 @@
 
             if (quality === "/") {
                 return "deze combinatie van bron en doorstraalde dikte is onlogisch";
+            }
+
+            // Correctie: Pas de ovenmateriaal check toe op de RT16172 procedure
+            if (procedure === "RT16172" && ovenMateriaal === "Ja") {
+                // Regel voor ovenmateriaal: altijd D4 bij RT16172 indien 'Ja'
+                return "D4";
             }
 
             return quality;
