--- a/pruts.html
+++ b/pruts.html
@@ -127,7 +127,7 @@
         }
         h1 {
             background-color: white;
-            font-size: 30px; 
+            font-size: 30px;
             color: black;
             padding: 10px;
             border-radius: 30px;
@@ -168,6 +168,7 @@
         <div class="form-item" id="enBSubProcedureDiv" style="display:none;">
             <label for="enBSubProcedure">Klantprocedure:</label>
             <select id="enBSubProcedure" name="enBSubProcedure">
+                <option value="" disabled selected>Selecteer procedure</option>
                 <option value="RT16172">RT16172 Sabic</option>
                 <option value="RT14171">RT14171 Sitech</option>
                 <option value="RT20230059">RT 2023 0059 Haffmans</option>
@@ -802,21 +803,25 @@
                     }
                 }
             } else if (procedure === "EN-B") {
-                // const technique = document.getElementById("technique").value; // Already defined above
-                let doorstraaldeDikte = 2 * wanddikte;
+                let doorstraaldeDikte;
+                if (technique === "SWSI") {
+                    doorstraaldeDikte = wanddikte;
+                } else { // DWSI or DWDI
+                    doorstraaldeDikte = 2 * wanddikte;
+                }
 
                 if (technique === "SWSI") {
-                    if (wanddikte <= 1.5) wire = "W19";
-                    else if (wanddikte <= 2.5) wire = "W18";
-                    else if (wanddikte <= 4) wire = "W17";
-                    else if (wanddikte <= 6) wire = "W16";
-                    else if (wanddikte <= 8) wire = "W15";
-                    else if (wanddikte <= 12) wire = "W14";
-                    else if (wanddikte <= 20) wire = "W13";
-                    else if (wanddikte <= 30) wire = "W12";
-                    else if (wanddikte <= 35) wire = "W11";
-                    else if (wanddikte <= 45) wire = "W10";
-                    else if (wanddikte <= 65) wire = "W9";
+                    if (doorstraaldeDikte <= 1.5) wire = "W19";
+                    else if (doorstraaldeDikte <= 2.5) wire = "W18";
+                    else if (doorstraaldeDikte <= 4) wire = "W17";
+                    else if (doorstraaldeDikte <= 6) wire = "W16";
+                    else if (doorstraaldeDikte <= 8) wire = "W15";
+                    else if (doorstraaldeDikte <= 12) wire = "W14";
+                    else if (doorstraaldeDikte <= 20) wire = "W13";
+                    else if (doorstraaldeDikte <= 30) wire = "W12";
+                    else if (doorstraaldeDikte <= 35) wire = "W11";
+                    else if (doorstraaldeDikte <= 45) wire = "W10";
+                    else if (doorstraaldeDikte <= 65) wire = "W9";
                 } else if (technique === "DWDI") {
                     if (doorstraaldeDikte <= 1.5) wire = "W19";
                     else if (doorstraaldeDikte <= 2.5) wire = "W18";
@@ -843,7 +848,7 @@
                 }
 
                 if (source === "Se75") {
-                    if (technique === "SWSI"  && wanddikte >5 && wanddikte <= 20) {
+                    if (technique === "SWSI"  && doorstraaldeDikte >5 && doorstraaldeDikte <= 20) {
                         wire = "W" + (parseInt(wire.substring(1)) - 1);
                     } else if (technique === "DWDI" && doorstraaldeDikte >5 &&  doorstraaldeDikte <= 12) {
                         wire = "W" + (parseInt(wire.substring(1)) - 1);
@@ -967,6 +972,9 @@
                 filmQualityProcedure = "RT21013"; // Default EN-B logic for EN-A
             } else if (procedure === "EN-B") {
                 filmQualityProcedure = document.getElementById("enBSubProcedure").value;
+                if (!filmQualityProcedure) {
+                    filmQualityProcedure = "RT21013"; // Default to standard EN-B
+                }
             } else if (procedure === "ASME") {
                 filmQualityProcedure = "RT21002";
             }
