--- a/test.html
+++ b/test.html
@@ -1197,5 +1197,6 @@
             document.getElementById("sfd").value = minFFD.toFixed(2); // Initialize FFD field
         });
     </script>
+<div style="height: 200px;"></div>
 </body>
 </html>
