--- a/verval2.html
+++ b/verval2.html
@@ -234,5 +234,6 @@
 <button onclick="calculateActivity()">Bereken activiteit</button>
 
 <h2 id="result"></h2>
+<div style="height: 200px;"></div>
 </body>
 </html>
