--- a/test.html
+++ b/test.html
@@ -811,39 +811,41 @@
             return cross;
         }
 
-        // *** NIEUWE FUNCTIE TOEGEVOEGD ***
+        // *** BIJGEWERKTE FUNCTIE MET NAUWKEURIGERE MODELLEN ***
         function getNumberOfExposures(graphType, x, y) {
-            // These coefficients (a, b, c) define the y-boundary for a given x (y = ax^2 + bx + c)
+            // Linear models (y = mx + c) for higher accuracy and robustness
             const models = {
                 graph1: { // Opstelling 5/8/13/14
-                    line_2_3: { a: -1.18, b: 1.62, c: 1.10 },
-                    line_3_4: { a: -1.22, b: 1.63, c: 0.76 },
-                    line_4_5: { a: 0.00, b: 1.50, c: 0.53 }, // Dashed line
-                    line_5_6: { a: 0.00, b: 1.58, c: 0.36 },
-                    line_6_7: { a: 0.00, b: 1.33, c: 0.27 },
-                    line_7_8: { a: 0.00, b: 1.54, c: 0.12 },
-                    line_8_9: { a: -0.00, b: 1.82, c: -0.05 },
-                    line_9_10: { a: 0.00, b: 2.22, c: -0.25 },
-                    line_10_11: { a: 0.00, b: 2.14, c: -0.33 }
+                    line_2_3:   { m: 1.82, c: 1.10 },
+                    line_3_4:   { m: 1.36, c: 0.76 },
+                    line_4_5:   { m: 1.50, c: 0.53 }, // Dashed
+                    line_5_6:   { m: 1.58, c: 0.36 },
+                    line_6_7:   { m: 1.33, c: 0.27 },
+                    line_7_8:   { m: 1.43, c: 0.13 },
+                    line_8_9:   { m: 1.82, c: -0.05 },
+                    line_9_10:  { m: 2.22, c: -0.25 },
+                    line_10_11: { m: 2.22, c: -0.35 }
                 },
                 graph2: { // Opstelling 2
-                    line_2_3: { a: -1.24, b: 3.24, c: 2.24 },
-                    line_3_4: { a: -1.24, b: 3.24, c: 1.44 },
-                    line_4_5: { a: 0.00, b: 3.00, c: 1.05 }, // Dashed line
-                    line_5_6: { a: 0.00, b: 3.16, c: 0.71 },
-                    line_6_7: { a: -4.38, b: 4.38, c: 0.40 },
-                    line_7_8: { a: -2.04, b: 3.32, c: 0.29 },
-                    line_8_9: { a: -4.17, b: 4.02, c: 0.10 },
-                    line_9_10: { a: 0.00, b: 3.00, c: -0.05 },
-                    line_10_11: { a: 0.00, b: 2.50, c: -0.12 }
+                    line_2_3:   { m: 3.04, c: 2.24 },
+                    line_3_4:   { m: 3.04, c: 1.44 },
+                    line_4_5:   { m: 3.00, c: 1.05 }, // Dashed
+                    line_5_6:   { m: 3.16, c: 0.71 },
+                    line_6_7:   { m: 2.94, c: 0.46 },
+                    line_7_8:   { m: 2.86, c: 0.29 },
+                    line_8_9:   { m: 2.92, c: 0.12 },
+                    line_9_10:  { m: 3.00, c: -0.05 },
+                    line_10_11: { m: 2.50, c: -0.12 }
                 }
             };
 
             const m = models[graphType];
             if (!m) return "N/A";
 
-            const calcBoundary = (line, x_val) => (line.a * x_val * x_val) + (line.b * x_val) + line.c;
+            // Use linear model: y = mx + c
+            const calcBoundary = (line, x_val) => (line.m * x_val) + line.c;
 
+            // Check from the top down. If the point's y is higher than the line's y, it's in the region above.
             if (y > calcBoundary(m.line_2_3, x)) return "2";
             if (y > calcBoundary(m.line_3_4, x)) return "3";
             if (y > calcBoundary(m.line_4_5, x)) return "4";
@@ -855,8 +857,9 @@
             if (y > calcBoundary(m.line_10_11, x)) return "10";
             if (y <= calcBoundary(m.line_10_11, x) && y > 0) return "11+";
 
-            return "N/B"; // Not applicable or out of bounds
+            return "N/B";
         }
+
 
         function calculate() {
             autoCalculate(true); // Forceer auto-fill bij handmatige "Controleer" klik
@@ -1219,7 +1222,6 @@
             }
 
             // --- 3. Plot Exposures ---
-            // *** GEHELE SECTIE IS BIJGEWERKT ***
             document.getElementById('container1A').style.display = 'none';
             document.getElementById('container2A').style.display = 'none';
             document.getElementById('container1B').style.display = 'none';
